[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "mediumapi"
description = "Medium API helps you to quickly extract data from Medium's Website (https://medium.com).   You can gather data related to users, publications, articles (including its textual content), latest posts &amp; top writers within a topic/niche, etc… "
version = "1.0.0"
dependencies = ["apimatic-core~=0.2.0, >= 0.2.24", "apimatic-core-interfaces~=0.1.0, >= 0.1.8", "apimatic-requests-client-adapter~=0.1.0, >= 0.1.10", "python-dotenv>=0.21, <2.0"]
requires-python = ">=3.7"
[[project.authors]]
name = "Nishu Jain"
email = "nishu@mediumapi.com"

[project.optional-dependencies]
testutils = ["pytest>=7.2.2"]
[tool]
[tool.setuptools]
[tool.setuptools.packages]
[tool.setuptools.packages.find]
exclude = ["tests", "tests.*"]
